--- a/index.html
+++ b/index.html
@@ -335,8 +335,8 @@
               <div class="portfolio-img">
                 <picture>
                   <source srcset="./images/portfolio/taxi-service-mobile.jpg 1x, ./images/portfolio/taxi-service-mobile@2x.jpg 2x" media="(max-width:767px)" />
-                  <source srcset="./images/portfolio/taxi-service--tablet.jpg 1x, ./images/portfolio/taxi-service-tablet@2x.jpg 2x" media="(max-width:1157px)" />
-                  <source srcset="./images/portfolio/taxi-service--desctop.jpg 1x, ./images/portfolio/taxi-service--desctop@2x.jpg 2x" media="(min-width:1158px)" />
+                  <source srcset="./images/portfolio/taxi-service-tablet.jpg 1x, ./images/portfolio/taxi-service-tablet@2x.jpg 2x" media="(max-width:1157px)" />
+                  <source srcset="./images/portfolio/taxi-service-desctop.jpg 1x, ./images/portfolio/taxi-service-desctop@2x.jpg 2x" media="(min-width:1158px)" />
                   <img src="./images/portfolio/taxi-service-mobile.jpg" alt="Taxi Service" />
                 </picture>
                  <p class="portfolio-overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
@@ -449,7 +449,7 @@
         </div>    
     </footer>
     
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button class="close-btn" type="button">
           <svg class="close-icon" width="8" height="8" aria-label="close icon">
@@ -515,7 +515,7 @@
       </div>
     </div>
             <!-- MOBILE MENU -->
-    <div class="mobile-menu is-open">
+    <div class="mobile-menu">
       <button class="close-btn" type="button">
           <svg class="close-icon" width="8" height="8" aria-label="close icon">
             <use href="./images/icons.svg#icon-close"></use>
